# f1-pitstop-advisor-revised

./: README.md  pyproject.toml
experiments/: 00_orchestration.ipynb  1_create_dataset.ipynb  2_dataset_analysis.ipynb  3_model_selection.ipynb  4_simulation.ipynb  algorithm_experimentation.ipynb
experiments/1-data-processing/: 1_create_dataset.ipynb  2_dataset_analysis.ipynb
experiments/circuits-separate/: 1_create_dataset.ipynb
experiments/shared_libraries/: _simulation_utils.py  algorithms.py  data_processing.py  data_processing_utils.py  gather_data.py  model_search.py  simulation.py
