[project]
name = "f1-pitstop-advisor-revised"
version = "0.1.0"
description = ""
authors = [
    {name = "kw-00",email = "christopher.p.wojcik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1 (>=3.8.1,<4.0.0)",
    "pandas (>=2.1.1,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
